nivasa-macros/tests/trybuild/config_schema_tuple_struct.rs
use nivasa_macros::ConfigSchema;

#[derive(ConfigSchema)]
struct TupleConfig(String, String);

fn main() {}
